@@ -1,0 +1,4 @@
+[HTML_Template_Flexy]
+
+debug = 0
+
