@@ -189,6 +189,15 @@ Author: Rafael Ferreira Silva <rafael@webphp.com.br>
         'Enable IP banning'=>'Enable IP banning',
         'Enable Tidy html cleaning'=>'Enable Tidy html cleaning',
         'Session handler'=>'Session handler',
+        'Extended Session' => 'Extended Session',
+        'Enforce Single User' => 'Enforce Single User',
+        'You are allowed to connect from one computer at a time, other sessions were terminated!' => 'You are allowed to connect from one computer at a time, other sessions were terminated!',
+        'You have multiple sessions on this site!' => 'You have multiple sessions on this site!',
+        'Enables extended session API when using database sessions. This allows the site to enforce one session per user.' => 'Enables extended session API when using database sessions. This allows the site to enforce one session per user.',
+        'Enforces one session per user on this site (requires database session handling, and extended session to be on).' => 'Enforces one session per user on this site (requires database session handling, and extended session to be on).',
+        'Guests' => 'Guests',
+        'Members' => 'Members',
+        'Total' => 'Total',
         'Enable left/right columns'=>'Enable left/right columns',
         'Default article view type'=>'Default article view type',
         'Front controller script name'=>'Front controller script name',
